# HalleyTracker

./: .gitignore  CLAUDE.md  README.md  copilot-instructions.md  pyproject.toml
.github/: copilot-instructions.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-core-halley-computation-baseline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-UAT.md
.planning/phases/02-public-api-freshness-workflow/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md
.planning/phases/03-django-embed-surface/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-IHWWEBAPP-INTEGRATION.md  03-04-PLAN.md  03-04-SUMMARY.md
.planning/phases/04-deployment-offline-network-ops/: 04-01-PLAN.md  04-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/halley_tracker/: __init__.py  __main__.py  api.py  constants.py  core.py  django_embed.py  django_template_tags.py  ops.py  standalone_web.py
src/halley_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/halley_tracker/templatetags/: __init__.py  halley_tracker.py
tests/: test_api.py  test_core.py  test_django_embed.py  test_django_template_tags.py  test_django_templatetags.py  test_ops.py
