[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halley-tracker"
version = "0.1.0"
description = "Halley's Comet countdown and daily Earth-distance tracker"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
astro = [
  "astropy>=7.0,<8.0",
]

[project.scripts]
halley-tracker = "halley_tracker.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
